[package]
name = "hyper-proxy2"
version = "0.1.0"
authors = ["Oleh Bodunov <oleg.bdnf@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.4"
futures = "0.1.21"
futures-cpupool = { version = "0.1.6", optional = true }
http = "0.1.13"
httparse = "1.0"
h2 = "0.1.10"
iovec = "0.1"
itoa = "0.4.1"
log = "0.4"
net2 = { version = "0.2.32", optional = true }
time = "0.1"
tokio = { version = "0.1.7", optional = true }
tokio-executor = { version = "0.1.0", optional = true }
tokio-io = "0.1"
tokio-reactor = { version = "0.1", optional = true }
tokio-tcp = { version = "0.1", optional = true }
tokio-timer = { version = "0.2", optional = true }
want = "0.0.6"
futures-timer = "0.1"
num_cpus = "1.0"
pretty_env_logger = "0.2.0"
spmc = "0.2"
url = "1.0"
tokio-fs = "0.1"
tokio-mockstream = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.12.11"
