[package]
name = "serverV2"
version = "0.1.0"
authors = ["Oleh Bodunov <oleg.bdnf@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.1"
hyper = "0.12"
hyper-proxy = "0.5.0"
futures = "0.1.17"
tokio = "0.1"
tokio-io = "0.1.6"
bytes = "0.4.6"
tokio-tls = { version = "0.2", optional=true }
hyper-tls = { version = "0.3", optional=true }
native-tls = { version = "0.2", optional=true }
typed-headers = "0.1"
